--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -7,6 +7,7 @@ header {
 }
 
 main>div {
+    height: fit-content;
     background-color: rgb(116, 115, 116);
 }
 
@@ -77,4 +78,48 @@ footer {
 #btn {
     background-color: black;
     color: whitesmoke;
+}
+
+#bookshelf {
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 10px;
+    overflow: visible;
+}
+
+#num {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 30px;
+    color: rgb(236, 236, 235);
+}
+
+#card img {
+    width: 250px;
+    height: 300px;
+}
+
+#card {
+    width: 255px;
+    height: 400px;
+}
+
+#card a {
+    display: inline-block;
+    background-color: black;
+    border-radius: 4px;
+    font-size: 30px;
+    margin-top: 10px;
+    padding: 10px;
+    color: rgb(236, 236, 235);
+}
+
+#card a:hover {
+    color: rgb(182, 179, 179);
+}
+
+#card p {
+    font-size: 30px;
 }
