--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -2,11 +2,19 @@
 <html lang="en">
 
 <head>
-    <title>Error</title>
+    <%- include('../layout/head') %>
 </head>
 
 <body>
-    <p>error</p>
+    <header>
+        <%- include('../layout/header') %>
+    </header>
+    <main>
+        <p>error</p>
+    </main>
+    <footer>
+        <%- include('../layout/footer') %>
+    </footer>
 </body>
 
 </html>
