--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,33 +2,40 @@
 <html lang="en">
 
 <head>
-    <title>Book Collection</title>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/base.css">
-    <link rel="stylesheet" href="/styles/layout.css">
-    <link rel="stylesheet" href="/styles/modules.css">
-    <script src="https://kit.fontawesome.com/fc197ba782.js" crossorigin="anonymous"></script>
+    <%- include('../layout/head') %>
 </head>
 
 <body>
     <header>
-        <h1>Best Books!</h1>
-        <nav>
-            <li><a href="searches/new">Search the Google Books API</a></li>
-            <li><a href="/">Home</a></li>
-        </nav>
+        <%- include('../layout/header') %>
     </header>
     <main>
         <h2>My Bookshelf</h2>
-        <div></div>
+        <div>
+            <p id="num">
+                Total:
+                <%= booksNumber %>
+                    books
+            </p>
+            <div id="bookshelf">
+                <% savedBooks.forEach(book => {%>
+                    <div id="card">
+                        <img src="<%= book.image_url %>">
+                        <p>
+                            <%= book.title %>
+                        </p>
+                        <p>
+                            <%= book.author %>
+                        </p>
+                        <a href='/books/<%= book.id %>' target="_blank" rel="noopener noreferrer">View details</a>
+                    </div>
+                    <% }); %>
+
+            </div>
+        </div>
     </main>
     <footer>
-        <div>
-            <span><i class="fas fa-3x fa-envelope"></i></span>
-            <span><i class="fab fa-3x fa-twitter"></i></span>
-            <span><i class="fab fa-3x fa-github"></i></span>
-            <span><i class="fab fa-3x fa-linkedin-in"></i></span>
-        </div>
+        <%- include('../layout/footer')%>
     </footer>
 </body>
 
