--- a/views/pages/searches/new.ejs
+++ b/views/pages/searches/new.ejs
@@ -2,21 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Book Collection</title>
-    <link rel="stylesheet" href="/styles/reset.css">
-    <link rel="stylesheet" href="/styles/base.css">
-    <link rel="stylesheet" href="/styles/layout.css">
-    <link rel="stylesheet" href="/styles/modules.css">
-    <script src="https://kit.fontawesome.com/fc197ba782.js" crossorigin="anonymous"></script>
+    <%- include('../../layout/head')%>
 </head>
 
 <body>
     <header>
-        <h1>Best Books!</h1>
-        <nav>
-            <li><a href="searches/new">Search the Google Books API</a></li>
-            <li><a href="/">Home</a></li>
-        </nav>
+        <%- include('../../layout/header') %>
     </header>
     <main>
         <h4>Search by Title or Author</h4>
@@ -36,12 +27,7 @@
         </form>
     </main>
     <footer>
-        <div>
-            <span><i class="fas fa-3x fa-envelope"></i></span>
-            <span><i class="fab fa-3x fa-twitter"></i></span>
-            <span><i class="fab fa-3x fa-github"></i></span>
-            <span><i class="fab fa-3x fa-linkedin-in"></i></span>
-        </div>
+        <%- include('../../layout/footer') %>
     </footer>
 </body>
 
