--- a/views/pages/searches/show.ejs
+++ b/views/pages/searches/show.ejs
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+    <header>
+        <%- include('../../layout/header') %>
+    </header>
     <main>
         <% searchResults.forEach(book => {%>
             <img src="<%= book.image %>">
@@ -16,12 +19,26 @@
             <h3>
                 <%= book.author %>
             </h3>
+            <h3>
+                <%= book.isbn %>
+            </h3>
             <p>
                 <%= book.description %>
             </p>
+            <form id="selectBook" action="/books" method="POST">
+                <input type="text" name="image" value="<%= book.image %>" style="display: none;">
+                <input type="text" name="title" value="<%= book.title %>" style="display: none;">
+                <input type="text" name="author" value="<%= book.author %>" style="display: none;">
+                <input type="text" name="isbn" value="<%= book.isbn %>" style="display: none;">
+                <input type="text" name="description" value="<%= book.description %>" style="display: none;">
+                <button type="submit">Select this book</button>
+            </form>
             <% }); %>
 
     </main>
+    <footer>
+        <%- include('../../layout/footer') %>
+    </footer>
 </body>
 
 </html>
