--- a/views/pages/books/detail.ejs
+++ b/views/pages/books/detail.ejs
@@ -4,4 +4,5 @@
         <%= bookDetails.author %>
             <%= bookDetails.isbn %>
                 <%= bookDetails.description %>
+                    <%- include('edit')%>
 </section>
